Customizable block size

--- a/index.css
+++ b/index.css
@@ -38,6 +38,7 @@ html, body {
 	text-align: center;
 	border: 2px solid black;
 	border-radius: 10px;
+	display: inline-block;
 }
 
 .option_title {
